objects/AAKCS__Campaign_Status_Default_Value__c.object
<CustomObject>
    <fields>
        <fullName>AAKCS__Campaign_Status_Default__c</fullName>
        <label>Campaign Status Default</label>
        <referenceTo>AAKCS__Campaign_Status_Default__c</referenceTo>
        <relationshipName>Campaign_Status_Default_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AAKCS__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if this status is the default campaign member status.  This value will be assigned to the campaign status &quot;Default&quot; value.  Please ensure that only one Campaign Status Default value is selected  for the set of detaults.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAKCS__Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if this status indicated that a campaign member has responded.  This value will be assigned to the campaign status &quot;Responded&quot; value.</inlineHelpText>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAKCS__Sequence__c</fullName>
        <inlineHelpText>Enter a sequence number in which the order of the status&apos;s will be applied.
NOTE: The squence order will only be applied to added status&apos;s to the individual campaign, even if the action is Replace All.</inlineHelpText>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Member Status Default Value</label>
    <nameField>
        <label>Campaign Member Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Status Default Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AAKCS__Check_length_of_status</fullName>
        <active>true</active>
        <description>As the custom object field can be upto 80, but the status field can only be upto 40 then this validation rule ensures the 40 character limit is not broken.</description>
        <errorConditionFormula>LEN(Name)&gt;40</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Status can be a maximum of 40 characters</errorMessage>
    </validationRules>
</CustomObject>